# acc_data_mapping

./: CMakeLists.txt  conf.cpp  main.cpp  sta_test.cpp
Map/Origin_Map/EE1F/: info.json  mapInfo.txt  trajectory.txt  wp.txt  wp2.txt
Map/Origin_Map/ONCT/: enclog  icpconf.yaml  mapInfo.yaml  trajectory.txt  trajectory.txt.bkp  wp.txt
Map/Origin_Map/RWRC2021/: icpconf  info.json  mapInfo.txt  trajectory.txt
Map/Origin_Map/RWRC2022/: mapInfo (2).yaml
Other/: mapp.key
data/Master_data/: EE1_flat_sub
data/Sta_data/: EE1F_0.1_sta_data  EE1F_2.5_sta_data  EE1F_sta_data  ONCT_sta_data  RWRC2021_sta_data  RWRC2022_sta_data
